Fix login modal on small screens. Modal would appear low on screen due to spacing between buttons

--- a/project/static/css/styles.css
+++ b/project/static/css/styles.css
@@ -57,7 +57,8 @@ textarea {
 }
 
 .login-modal {
-    padding: 30px;
+    padding-top: 18px;
+    padding-bottom: 18px;
 }
 
 /* --------------------------- Horizontal scrolling field */
